--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       >
     </noscript>
     <div id="app"></div>
+    <script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
