第一次批改：美化 meta 、 lang 調成 zh-Hant-TW 、 刪除未用到的圖片

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-Hant-TW">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="每段體驗嚐起來都是獨一無二的美味！城市導覽、票券體驗、包車服務...你想要的我們都有。來旅味挑選適合你的行程，親手拼出自己的 Way ！"
+    />
+    <meta name="COPYRIGHT" content="Copyright (c) by Taste_of " />
+    <meta name="keywords" lang="zh-TW" content="城市導覽,票券體驗,包車服務,半自助旅行,台灣" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
