--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="COPYRIGHT" content="Copyright (c) by Taste_of " />
     <meta name="keywords" lang="zh-TW" content="城市導覽,票券體驗,包車服務,半自助旅行,台灣" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico" /> -->
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
